[package]
name = "mindland_window"
version = "0.1.0"
edition = "2021"
description = "Cross-platform window management for MindLand"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { workspace = true }
cocoa = { workspace = true }
core-foundation = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { workspace = true }
windows = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { workspace = true }